# achilles

./: README.md  ansible.cfg  hosts  pyproject.toml  run.sh  site.yaml
inventory/: hosts
roles/ara/files/: settings.yaml
roles/ara/tasks/: main.yaml
roles/base/defaults/: main.yaml
roles/base/files/: .zshrc
roles/base/handlers/: main.yaml
roles/base/tasks/: main.yaml
roles/cis/defaults/: main.yaml
roles/cis/files/: inspec.py
roles/cis/tasks/: inspec.yaml  main.yaml
roles/cis/templates/: inspec.service  inspec.timer
roles/common/tasks/: main.yaml
roles/docker/tasks/: main.yaml
roles/prometheus/defaults/: main.yaml
roles/prometheus/handlers/: main.yaml
roles/prometheus/tasks/: main.yaml
roles/prometheus/templates/: node_exporter.service
roles/rabbitmq/files/: rabbitmq.conf
roles/rabbitmq/handlers/: main.yaml
roles/rabbitmq/tasks/: main.yaml
roles/tableau/defaults/: main.yaml
roles/tableau/files/: simpleproxy.service
roles/tableau/handlers/: main.yaml
roles/tableau/tasks/: main.yaml
roles/test/tasks/: main.yaml
roles/user_management/defaults/: main.yaml
roles/user_management/files/: pam.d_sudo
roles/user_management/handlers/: main.yaml
roles/user_management/tasks/: main.yaml
roles/user_management/templates/: google_authenticator.j2  sshd_config.j2
roles/vpn/defaults/: main.yaml
roles/vpn/handlers/: main.yaml
roles/vpn/tasks/: main.yaml
roles/vpn/templates/: storage.mount.j2  users.conf.j2  wireguard.conf.j2
roles/website/files/: bink.com.conf  rc.bink.com.conf
roles/website/tasks/: main.yaml
(+22 files in other folders)
