[tool.poetry]
name = "achilles"
version = "0.1.0"
description = "ansible playbook to configure servers"
authors = ["Thenuja Viknarajah <thenuja_1@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ansible = "^7.2.0"
ara = {extras = ["server"], version = "^1.6.1"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
